--- a/index.html
+++ b/index.html
@@ -19,28 +19,35 @@
             	<h1 id="PageTitle">HTML5 Sudoku</h1>
                 <div id="Content">
                     <div id="Column1">
-                        <span role="tab" aria-selected="true" aria-controls="demoIntro" tabindex="100">In this demo we take the well-known game of Sudoku, and demonstrate how developers can use HTML5 and JavaScript to create an efficient algorithm to solve these puzzles. The algorithms draw heavily on the Chakra engine’s support for ECMAScript 5 standard array operations to rapidly solve many Sudoku games. You can also manually solve Sudoku puzzles.</span>
-                        <br/>
-                        <br/>
-                        <br/>
-                        <label># of Games:</label>&nbsp;&nbsp;
-                            <select id="difficulties">
-                                <option value="1">1000</option>
-                                <option value="2" selected>5000</option>
-                                <option value="3">10000</option>
-                            </select>
-                        <input id="amazeButton" type="submit" value="SOLVE GAMES" />
-                        <br/>
-                        <br/>
-                        <div id="calculating" style="display: none;">
-                            <img src="iconTime.png" alt="Calculating Clock" /><span class="finishedLabel">Solving puzzles...</span>
-                        </div>
                         <div role="tab" aria-selected="true" aria-controls="perfResults" tabindex="200" id="finishedCalculating" style="display: none;">
                             <img src="iconTime.png" alt="Calculating Clock" /><span class="finishedLabel">Finished In:</span>
                             <br/>
                             <span id="timeFinished"></span>
                         </div>
                     </div>
+                    <div class="gameControlSet">
+                            <input id="newGameButton" type="submit" value="게임 시작" class="gameControls"/>
+                            <label>
+                                난이도:
+                            </label>&nbsp;&nbsp;
+                            <select id="difficulty">
+                                <option value="1" selected>쉬움</option>
+                                <option value="2">중간</option>
+                                <option value="3">어려움</option>
+                                <option value="4">매우 어려움</option>
+                                <option value="5">전문가</option>
+                            </select>
+                        <div class="gameControlSet">
+                            <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
+                            <br/>
+                            <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">MISTAKE FOUND</span>
+                            <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">LOOKIN GOOD</span>
+                            <br/>
+                            <div class="gameControlSet">
+                            <input id="solveButton" type="submit" value="정답 보여주기" class="gameControls"/>
+                            </div>
+                          </div>
+                        </div>
                     <div id="sudokuBoard">
                         <table cellspacing="0" cellpadding="0">
                             <tr>
@@ -546,31 +553,6 @@
                             </tr>
                         </table>
                     </div>
-                    <div id="Column2">
-                        <div class="gameControlSet">
-                            <input id="newGameButton" type="submit" value="NEW GAME" class="gameControls"/>
-                            <br/>
-                            <label>
-                                Level:
-                            </label>&nbsp;&nbsp;
-                            <select id="difficulty">
-                                <option value="1" selected>Easy</option>
-                                <option value="2">Medium</option>
-                                <option value="3">Hard</option>
-                                <option value="4">Very Hard</option>
-                                <option value="5">Insane</option>
-                            </select>
-                        </div>
-                        <div class="gameControlSet">
-                            <input id="checkButton" type="submit" value="CHECK &#x2713;" class="gameControls"/>
-                            <br/>
-                            <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">MISTAKE FOUND</span>
-                            <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">LOOKIN GOOD</span>
-                        </div>
-                        <div class="gameControlSet">
-                            <input id="solveButton" type="submit" value="SOLVE" class="gameControls"/>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -583,7 +565,7 @@
                 </small>
                 <br/>
                 <br/>
-                <input id="winNewGameButton" type="submit" value="NEW GAME" class="gameControls"/>
+                <input id="winNewGameButton" type="submit" value="새로운 게임" class="gameControls"/>
                 <input id="winCloseButton" type="submit" value="CLOSE" class="gameControls"/>
             </div>
         </div>
