--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
                                 <option value="4">매우 어려움</option>
                                 <option value="5">전문가</option>
                             </select>
-                        <div class="gameControlSet">
                             <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
                             <br/>
                             <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">MISTAKE FOUND</span>
                             <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">LOOKIN GOOD</span>
-                            <br/>
-                            <div class="gameControlSet">
-                            <input id="solveButton" type="submit" value="정답 보여주기" class="gameControls"/>
-                            </div>
-                          </div>
+<!--                            <input id="solveButton" type="submit" value="정답 보여주기" class="gameControls"/>-->
                         </div>
                     <div id="sudokuBoard">
                         <table cellspacing="0" cellpadding="0">
