--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
                                 <option value="4">매우 어려움</option>
                                 <option value="5">전문가</option>
                             </select>
-                            <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
-                            <br/>
-                            <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">MISTAKE FOUND</span>
+<br/>                    <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
+                            <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">실수가 있어요!</span>
                             <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">LOOKIN GOOD</span>
 <!--                            <input id="solveButton" type="submit" value="정답 보여주기" class="gameControls"/>-->
                         </div>
