--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="msapplication-starturl" content="https://internetexplorer.github.io/Sudoku/" />
         <meta name="msapplication-navbutton-color" content="#C40502" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <link rel="stylesheet" type="text/css" href="demo.css" />
 	<link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     </head>
@@ -563,6 +564,7 @@
                 <input id="winCloseButton" type="submit" value="CLOSE" class="gameControls"/>
             </div>
         </div>
-        <script type="text/javascript" src="demo.js"></script>
+        <script type="text/javascript" src="demo.js">
+        </script>
     </body>
 </html>
