--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="msapplication-starturl" content="https://internetexplorer.github.io/Sudoku/" />
         <meta name="msapplication-navbutton-color" content="#C40502" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.8">
+        <meta name="viewport" content="width=400px, initial-scale=0.8">
         <link rel="stylesheet" type="text/css" href="demo.css" />
 	<link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     </head>
