--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="msapplication-starturl" content="https://internetexplorer.github.io/Sudoku/" />
         <meta name="msapplication-navbutton-color" content="#C40502" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.7">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="demo.css" />
 	<link rel="shortcut icon" href="icon.ico" type="image/x-icon" />
     </head>
@@ -38,7 +38,9 @@
                                 <option value="4">매우 어려움</option>
                                 <option value="5">전문가</option>
                             </select>
-<br/>                    <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
+                        </div>
+                    <div class="gameControlSet">
+                            <input id="checkButton" type="submit" value="정답 확인 &#x2713;" class="gameControls"/>
                             <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">실수가 있어요!</span>
                             <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">LOOKIN GOOD</span>
 <!--                            <input id="solveButton" type="submit" value="정답 보여주기" class="gameControls"/>-->
